--- a/src/pages/SnakePage/SnakePage.scss
+++ b/src/pages/SnakePage/SnakePage.scss
@@ -10,10 +10,16 @@
       position: relative;
       &__snake {
         position: absolute;
-        width: 8px;
-        height: 8px;
+        width: 10px;
+        height: 10px;
         background-color: #6b5407;
       }
+    }
+    &__gameover {
+      width: 300px;
+      height: 300px;
+      background-color: #1c00ba;
+      border: solid 4px #d6af2e;
     }
   }
 }
