--- a/src/pages/SnakePage/SnakePage.scss
+++ b/src/pages/SnakePage/SnakePage.scss
@@ -1,12 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 .snake-game {
+  font-family: 'Press Start 2P', cursive;
+  h2{
+    color: #afac0d
+  }
   &__content {
     display: flex;
     justify-content: center;
+    &__holder{   
+      display: flex;
+      justify-content: center;
+      height: 320px;
+      width: 320px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #afac0d;
     &__board {
       width: 300px;
       height: 300px;
-      background-color: #b0ba00;
-      border: solid 4px #6b5407;
+      background-color: #afac0d;
+      border: solid 4px #5f500a;
       position: relative;
       overflow: hidden;
       &__snake {
@@ -25,10 +39,31 @@
       }
     }
     &__gameover {
-      width: 300px;
-      height: 300px;
-      background-color: #1c00ba;
-      border: solid 4px #d6af2e;
+    display: flex;
+    width: 320px;
+    height: 320px;
+    background-color: #191801;
+    border: solid 4px #d6af2e;
+    justify-content: center;
+    align-items: center;
+    button{
+      background: #afac0d;
+      border: none;
+      width: 150px;
+      height: 50px;
+      border-radius: 6px;
+      font-size: 13px;
+      font-family: 'Press Start 2P', cursive;
+      text-transform: uppercase;
+      cursor: pointer;
+      &:hover{
+        color: #afac0d;
+        background: #191801;
+        border: solid 2px #afac0d;
+      }
     }
+    }
+    }
+
   }
 }
