--- a/src/components/shared/header/header.scss
+++ b/src/components/shared/header/header.scss
@@ -1,7 +1,13 @@
+@import "../../../style/variables.scss";
+
 .main-header{
   &__title{
   font-family: 'Amatic SC', cursive;
   color: #69af46;
-  font-size: 60px;
+  font-size: 75px;
+  @media #{$mobile}{
+    font-size: 40px;
+    margin: 10px;
+  }
   }
 }
