--- a/src/pages/SnakePage/SnakePage.scss
+++ b/src/pages/SnakePage/SnakePage.scss
@@ -1,9 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import "../../style/variables.scss";
+
 .snake-game {
   font-family: 'Press Start 2P', cursive;
   h2{
     color: #afac0d;
     margin-bottom: 50px;
+    @media #{$mobile}{
+      display: none;
+    }
+  }
+  &__instructions{
+    width: 100px;
+    margin-top: 9px;
+    opacity: 0.8;
+    @media #{$tablet}{
+      display: none;
+    }
+  }
+  &__controls{
+        width: 300px;
+    margin: auto;
+    margin-top: 30px;
+    display: none;
+    @media #{$tablet}{
+      display: block;
+    }
+    @media #{$tinymobile}{
+      margin-top: 15px;
+    }
+    &__btnholder{
+      button{
+        width: 45px;
+        height: 45px;
+        border: none;
+        border-radius: 12px;
+        background: #afac0d;
+        font-size: 24px;
+        &.margin-r{
+          margin-right: 50px;
+        }
+        &:focus{
+          outline: none;
+        }
+        @media #{$tinymobile}{
+        width: 35px;
+        height: 35px;
+        border-radius: 8px;
+        font-size: 20px;
+    }
+      }
+    }
+  }
+  &__score{
+    width: 320px;
+    margin: auto;
+    background: #191801;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #afac0d;
   }
   &__content {
     display: flex;
