--- a/src/components/shared/header/header.scss
+++ b/src/components/shared/header/header.scss
@@ -4,7 +4,8 @@
   &__title{
   font-family: 'Amatic SC', cursive;
   color: #69af46;
-  font-size: 75px;
+  font-size: 60px;
+  margin: 15px;
   @media #{$mobile}{
     font-size: 40px;
     margin: 10px;
