someone fails and it isn't me

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,4 +1,5 @@
 $tinymobile: "only screen and (max-width : 320px)";
+$smallmobile: "only screen and (max-width : 350px)";
 $mobile: "only screen and (max-width : 767px)";
 $tablet: "only screen and (max-width : 1024px)";
 
