--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:900&display=swap');
 
 body {
   background-color: #282c34;
